--- a/_tweets-md/2010/2010-08-01-tweets.md
+++ b/_tweets-md/2010/2010-08-01-tweets.md
@@ -1,195 +1,201 @@
+---    
+title: "Social Media - August"
+date: "2010-08-31"
+time: 23:59:59 +0000
+---
+
 > I had a great creative session with @NancyWhite for our upcoming BGIedu workshop on Online Community Management coming up on Sat Aug 14th.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Aug 04 01:44:19 +0000 2010](https://twitter.com/ChristopherA/status/20267672393)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Aug 04 01:44:19 +0000 2010](https://twitter.com/ChristopherA/status/20267672393)
 
 ----
 
 > Looking for a great intro video on online community management to share as a "pre-reading" before the workshop. Any suggestions?
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Aug 04 01:48:29 +0000 2010](https://twitter.com/ChristopherA/status/20267966584)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Aug 04 01:48:29 +0000 2010](https://twitter.com/ChristopherA/status/20267966584)
 
 ----
 
 > Thinking green isn't easy: "The Irony Of Buying 'Green'" on @ForbesTech written by @jknoblauch  [http://j.mp/9kH0g1](http://j.mp/9kH0g1)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Aug 04 02:11:02 +0000 2010](https://twitter.com/ChristopherA/status/20269492490)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Aug 04 02:11:02 +0000 2010](https://twitter.com/ChristopherA/status/20269492490)
 
 ----
 
 > For me, Google Wave never did its basic functionality as well as etherpad or synchoedit. So I'm not surprised it is being cut off.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Aug 06 07:15:47 +0000 2010](https://twitter.com/ChristopherA/status/20449688359)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 06 07:15:47 +0000 2010](https://twitter.com/ChristopherA/status/20449688359)
 
 ----
 
 > "@DalaiLama Anger, jealousy, impatience, and hatred are the real troublemakers, with them problems cannot be solved.” [Impatience is my sin]
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Aug 08 20:56:40 +0000 2010](https://twitter.com/ChristopherA/status/20654103732)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 08 20:56:40 +0000 2010](https://twitter.com/ChristopherA/status/20654103732)
 
 ----
 
 > RT @dom: Ukraine held a contest, and the winner @Gameprom got a trip to @iOSDevCamp next weekend! GET YER TICKETS NOW. [http://j.mp/ios-dev](http://j.mp/ios-dev)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Aug 09 23:58:29 +0000 2010](https://twitter.com/ChristopherA/status/20747821098)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 09 23:58:29 +0000 2010](https://twitter.com/ChristopherA/status/20747821098)
 
 ----
 
 > Some very interesting new eco-power devices from Belkin called Conserve Insight™ that I'm thinking about purchasing: [http://bit.ly/brKrQE](http://bit.ly/brKrQE)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Aug 10 00:55:58 +0000 2010](https://twitter.com/ChristopherA/status/20751982879)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 10 00:55:58 +0000 2010](https://twitter.com/ChristopherA/status/20751982879)
 
 ----
 
 > A blast from the past—ran into a Wikipedia page for the first online game I designed, Castle Marrach. 10 years old 9/21 [http://bit.ly/bkE2aJ](http://bit.ly/bkE2aJ)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Aug 10 02:55:48 +0000 2010](https://twitter.com/ChristopherA/status/20760713303)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 10 02:55:48 +0000 2010](https://twitter.com/ChristopherA/status/20760713303)
 
 ----
 
 > On August 31 (my birthday) @twitterapi has announced basic auth will be shut down in favor of oauth. I salute! [http://bit.ly/anYWSC](http://bit.ly/anYWSC)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Aug 11 06:29:54 +0000 2010](https://twitter.com/ChristopherA/status/20863664923)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Aug 11 06:29:54 +0000 2010](https://twitter.com/ChristopherA/status/20863664923)
 
 ----
 
 > RT @judell: The "how to" article is a well-established genre. The "why to" article not so much. Puzzling to me. I always care about why  ...
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Aug 12 04:39:32 +0000 2010](https://twitter.com/ChristopherA/status/20947328850)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 12 04:39:32 +0000 2010](https://twitter.com/ChristopherA/status/20947328850)
 
 ----
 
 > Good advice from @marioasselin: "Education is not filling a bucket, but lighting a fire." /translated by @sebpaquet #qotd #bgiedu
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Aug 13 18:49:33 +0000 2010](https://twitter.com/ChristopherA/status/21087181226)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 13 18:49:33 +0000 2010](https://twitter.com/ChristopherA/status/21087181226)
 
 ----
 
 > RT @maxmarmer: Check out our blog describing a new wave of startups & my post on differentiating them from social entrepreneurship. http ...
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Aug 13 18:57:16 +0000 2010](https://twitter.com/ChristopherA/status/21087648946)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 13 18:57:16 +0000 2010](https://twitter.com/ChristopherA/status/21087648946)
 
 ----
 
 > Pure serendipity—dropped McMenamins Edgefield for cheap $38 hostel room on way home, and my current fave duo Rodrigo y Gabriella is playing.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Aug 15 04:30:55 +0000 2010](https://twitter.com/ChristopherA/status/21204664094)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 15 04:30:55 +0000 2010](https://twitter.com/ChristopherA/status/21204664094)
 
 ----
 
 > RT @zephoria: ::laugh:: RT @phil_nash Welcome to the new decade: Java's a restricted platform, GOOG's evil, APPL's a monopoly & MSFT's t ...
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Aug 15 05:01:17 +0000 2010](https://twitter.com/ChristopherA/status/21206522582)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 15 05:01:17 +0000 2010](https://twitter.com/ChristopherA/status/21206522582)
 
 ----
 
 > Video of Rodrigo y Gabriella's first encore, at McMenamins Edgefield "Poor Farm" in Troutsdale near Portland: [http://yfrog.us/ccjivz](http://yfrog.us/ccjivz)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Aug 15 05:10:33 +0000 2010](https://twitter.com/ChristopherA/status/21207086775)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 15 05:10:33 +0000 2010](https://twitter.com/ChristopherA/status/21207086775)
 
 ----
 
 > Video of Rodrigo y Gabriella's 2nd encore, channeling Jimi Hendrix at McMenamins Edgefield:  [http://yfrog.us/2d9z2z](http://yfrog.us/2d9z2z)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Aug 15 05:23:49 +0000 2010](https://twitter.com/ChristopherA/status/21207858742)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 15 05:23:49 +0000 2010](https://twitter.com/ChristopherA/status/21207858742)
 
 ----
 
 > RT @bussgang: My career has been heavily influenced by serendipity. The Economist explains why: [http://bit.ly/coygG1](http://bit.ly/coygG1)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Aug 15 05:26:17 +0000 2010](https://twitter.com/ChristopherA/status/21208000485)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 15 05:26:17 +0000 2010](https://twitter.com/ChristopherA/status/21208000485)
 
 ----
 
 > McMenamins Edgefield "Poor Farm" tends to austere w/separate baths & no AC. Hostel rooms a bargain: $34.04 w/9 bars & spa pool & great music
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Aug 15 15:28:22 +0000 2010](https://twitter.com/ChristopherA/status/21238707076)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 15 15:28:22 +0000 2010](https://twitter.com/ChristopherA/status/21238707076)
 
 ----
 
 > The men's hostel room at McMenamins Edgefield "Poor Farm", with tax $34.04. But who need to sleep? [http://twitpic.com/2f1ef6](http://twitpic.com/2f1ef6)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Aug 15 15:31:02 +0000 2010](https://twitter.com/ChristopherA/status/21238905455)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 15 15:31:02 +0000 2010](https://twitter.com/ChristopherA/status/21238905455)
 
 ----
 
 > Dilbert on small group process: [http://bit.ly/93kPc1](http://bit.ly/93kPc1)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Aug 15 16:03:31 +0000 2010](https://twitter.com/ChristopherA/status/21241256022)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 15 16:03:31 +0000 2010](https://twitter.com/ChristopherA/status/21241256022)
 
 ----
 
 > RT @techcocktail: 10 Insights From SocialDevCamp Chicago - [http://bit.ly/sdcchi10](http://bit.ly/sdcchi10) by @SwathyPrithivi featuring @andrewmason @benhuh @chr ...
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Aug 17 22:41:25 +0000 2010](https://twitter.com/ChristopherA/status/21439189961)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 17 22:41:25 +0000 2010](https://twitter.com/ChristopherA/status/21439189961)
 
 ----
 
 > RT @zephoria: social divisions between Orkut & Facebook in Brazil by @papfrancisco: [http://bit.ly/cbEOGE](http://bit.ly/cbEOGE)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Aug 17 22:51:27 +0000 2010](https://twitter.com/ChristopherA/status/21439836421)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 17 22:51:27 +0000 2010](https://twitter.com/ChristopherA/status/21439836421)
 
 ----
 
 > A 7" iPad didn't make much sense to me 5 months ago, but I still use Kindle to read eBooks today. I would buy a 7" iPad with Retina Display.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Aug 17 22:59:06 +0000 2010](https://twitter.com/ChristopherA/status/21440326383)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 17 22:59:06 +0000 2010](https://twitter.com/ChristopherA/status/21440326383)
 
 ----
 
 > I'm at iOSDevCamp (formerly iPhoneDevCamp) matchmaking teams creating apps for this Sunday's Hackathon.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Aug 21 04:40:33 +0000 2010](https://twitter.com/ChristopherA/status/21723041336)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 21 04:40:33 +0000 2010](https://twitter.com/ChristopherA/status/21723041336)
 
 ----
 
 > Video recap of the first day of iOSDevCamp [http://bit.ly/bxikSC](http://bit.ly/bxikSC) and livecast [http://bit.ly/aiT6rR](http://bit.ly/aiT6rR)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Aug 21 22:48:36 +0000 2010](https://twitter.com/ChristopherA/status/21782974457)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 21 22:48:36 +0000 2010](https://twitter.com/ChristopherA/status/21782974457)
 
 ----
 
 > My team matchmaking role at iOSDevCamp is winding down. There is a hum of energy from folks building for hackathon tomorrow at 2pm.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Aug 21 23:20:32 +0000 2010](https://twitter.com/ChristopherA/status/21784723698)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 21 23:20:32 +0000 2010](https://twitter.com/ChristopherA/status/21784723698)
 
 ----
 
 > Submit your iOSDevCamp hackathon entries at [http://bit.ly/iOSDevCamp2010-Hackathon](http://bit.ly/iOSDevCamp2010-Hackathon) — all entries must be in by noon Sunday.
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Aug 22 05:50:03 +0000 2010](https://twitter.com/ChristopherA/status/21808188334)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 22 05:50:03 +0000 2010](https://twitter.com/ChristopherA/status/21808188334)
 
 ----
 
 > I have posted the official list of iOSDevCamp Hackathon winners at [http://bit.ly/agA7Dm](http://bit.ly/agA7Dm) —I am honored to see such creativity and innovation!
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Aug 23 08:27:18 +0000 2010](https://twitter.com/ChristopherA/status/21897566098)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 23 08:27:18 +0000 2010](https://twitter.com/ChristopherA/status/21897566098)
 
 ----
 
 > RT @peterthoeny: Observations on Silicon Valley entrepreneurship from an MIT Sloan perspective [http://bit.ly/9fCN4e](http://bit.ly/9fCN4e)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Aug 24 06:15:47 +0000 2010](https://twitter.com/ChristopherA/status/21978921773)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 24 06:15:47 +0000 2010](https://twitter.com/ChristopherA/status/21978921773)
 
 ----
 
 > RT @zephoria: "Why Privacy Is Not Dead" - essay I wrote for the @TechReview Magazine: [http://bit.ly/9aoorf](http://bit.ly/9aoorf)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Aug 26 23:40:45 +0000 2010](https://twitter.com/ChristopherA/status/22219492283)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 26 23:40:45 +0000 2010](https://twitter.com/ChristopherA/status/22219492283)
 
 ----
 
 > Interested in beta testing or creating sample content for our new Griddler (Grid Reader) app that I demonstrated at iOSDevCamp? Contact me.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Aug 31 18:53:27 +0000 2010](https://twitter.com/ChristopherA/status/22640712858)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 31 18:53:27 +0000 2010](https://twitter.com/ChristopherA/status/22640712858)
 
 ----
 
 > Hurricane Earl missed my mother in St. Thomas USVI—she only lost a tree and expects a few days w/o power, phone, cell & facebook ;-)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Aug 31 23:33:32 +0000 2010](https://twitter.com/ChristopherA/status/22658784772)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 31 23:33:32 +0000 2010](https://twitter.com/ChristopherA/status/22658784772)
 
 ----
 
 > RT @bjfogg: Today I'm announcing Persuasion Boot Camp. The venue: my guest home in wine country, next to river [http://bit.ly/persuasionb](http://bit.ly/persuasionb) ...
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Aug 31 23:34:15 +0000 2010](https://twitter.com/ChristopherA/status/22658835999)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 31 23:34:15 +0000 2010](https://twitter.com/ChristopherA/status/22658835999)
