--- a/_tweets-md/2010/2010-05-01-tweets.md
+++ b/_tweets-md/2010/2010-05-01-tweets.md
@@ -1,132 +1,138 @@
+---    
+title: "Social Media - May"
+date: "2010-05-31"
+time: 23:59:59 +0000
+---
+
 > Really great article by @kallewoof on privacy & disclosure on the internet in sweden, america, japan [http://bit.ly/9W0DXO](http://bit.ly/9W0DXO)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon May 03 17:07:13 +0000 2010](https://twitter.com/ChristopherA/status/13315735767)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon May 03 17:07:13 +0000 2010](https://twitter.com/ChristopherA/status/13315735767)
 
 ----
 
 > Heading to Seattle for a week. Will be at #BGIedu weekend intensive + a few days on either side.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue May 04 19:17:07 +0000 2010](https://twitter.com/ChristopherA/status/13379736970)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue May 04 19:17:07 +0000 2010](https://twitter.com/ChristopherA/status/13379736970)
 
 ----
 
 > Once again @boingo fails me, reporting that I have too many sessions when I use both iPad and iPhone. This despite that I'm paying premium.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed May 05 03:39:44 +0000 2010](https://twitter.com/ChristopherA/status/13403870854)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 05 03:39:44 +0000 2010](https://twitter.com/ChristopherA/status/13403870854)
 
 ----
 
 > Excellent article on UC Berkeley offering videos & podcasts of classes online: The Lecture's Online, Let's Play Hookie [http://bit.ly/bBO1PW](http://bit.ly/bBO1PW)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed May 05 13:54:52 +0000 2010](https://twitter.com/ChristopherA/status/13427609116)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 05 13:54:52 +0000 2010](https://twitter.com/ChristopherA/status/13427609116)
 
 ----
 
 > Looking for Apple WWDC ticket. My ticket is going to @kallewoof
 
-<img src="../../media/tweet.ico" width="12" /> [Fri May 07 03:28:14 +0000 2010](https://twitter.com/ChristopherA/status/13526407602)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 07 03:28:14 +0000 2010](https://twitter.com/ChristopherA/status/13526407602)
 
 ----
 
 > RT @bella_b: Kim Jordan, New Belgium Brewery: "Our Purpose is to operate a profitable company that makes our love and talent manifest."  ...
 
-<img src="../../media/tweet.ico" width="12" /> [Fri May 07 03:59:12 +0000 2010](https://twitter.com/ChristopherA/status/13527859788)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 07 03:59:12 +0000 2010](https://twitter.com/ChristopherA/status/13527859788)
 
 ----
 
 > Bainbridge Graduate Institute #BGIedu listed by Fast Company as one of the top 5 green MBA programs in the US [http://bit.ly/a2FQSM](http://bit.ly/a2FQSM)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun May 09 03:48:42 +0000 2010](https://twitter.com/ChristopherA/status/13646616169)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun May 09 03:48:42 +0000 2010](https://twitter.com/ChristopherA/status/13646616169)
 
 ----
 
 > Re: Kagan nom @Lessig writes: "It's not enough to appoint someone who will cast the right vote. We need someone who will make majorities."
 
-<img src="../../media/tweet.ico" width="12" /> [Mon May 10 16:14:21 +0000 2010](https://twitter.com/ChristopherA/status/13734402122)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon May 10 16:14:21 +0000 2010](https://twitter.com/ChristopherA/status/13734402122)
 
 ----
 
 > My 2-degree connection to a supreme court justice candidate: @Lessig writes thoughtfully about Kagan's nomination [http://j.mp/aQbzTh](http://j.mp/aQbzTh)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon May 10 16:22:13 +0000 2010](https://twitter.com/ChristopherA/status/13734760260)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon May 10 16:22:13 +0000 2010](https://twitter.com/ChristopherA/status/13734760260)
 
 ----
 
 > "Experience, prof. networks, encouragement, support are keys to success for women entrepreneurs" Kauffman study finds [http://bit.ly/c9IM38](http://bit.ly/c9IM38)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed May 12 18:35:37 +0000 2010](https://twitter.com/ChristopherA/status/13865426895)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 12 18:35:37 +0000 2010](https://twitter.com/ChristopherA/status/13865426895)
 
 ----
 
-Replying to [@ChristopherA](https://twitter.com/chrismessina/status/13864689627)
+
 
 > .@chrismessina We still need an HTML 5 slidecast capability (ie slides + audio). My Synchroedit engineer look into it and its difficult.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed May 12 18:47:04 +0000 2010](https://twitter.com/ChristopherA/status/13865902056)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 12 18:47:04 +0000 2010](https://twitter.com/ChristopherA/status/13865902056)
 
 ----
 
 > RT @brandontreb: RT @ManningBooks: Today Only! Get the ebook version of iPad in Practice (http://bit.ly/8XzyjM) for $15! Use code dotd05 ...
 
-<img src="../../media/tweet.ico" width="12" /> [Wed May 12 18:48:07 +0000 2010](https://twitter.com/ChristopherA/status/13865944016)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 12 18:48:07 +0000 2010](https://twitter.com/ChristopherA/status/13865944016)
 
 ----
 
 > .@Calacanis is overly personaliizing Zuckerberg of Facebook  
 > here, but the repeated ethical & privacy issues are real: [http://bit.ly/c0XYeL](http://bit.ly/c0XYeL)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed May 12 19:03:11 +0000 2010](https://twitter.com/ChristopherA/status/13866577792)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 12 19:03:11 +0000 2010](https://twitter.com/ChristopherA/status/13866577792)
 
 ----
 
 > Ads that just don't work anymore (or: celebrating how far we've come) – a photo set on Flickr: [http://bit.ly/8ZDIgW](http://bit.ly/8ZDIgW) /via @heartiq
 
-<img src="../../media/tweet.ico" width="12" /> [Wed May 12 19:38:04 +0000 2010](https://twitter.com/ChristopherA/status/13868067299)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 12 19:38:04 +0000 2010](https://twitter.com/ChristopherA/status/13868067299)
 
 ----
 
 > Good article on "Why Co-Working Makes Sense for Small Businesses" [http://bit.ly/a1zioe](http://bit.ly/a1zioe) — I agree, thus why I support @BerkeleyCowork
 
-<img src="../../media/tweet.ico" width="12" /> [Wed May 12 20:42:21 +0000 2010](https://twitter.com/ChristopherA/status/13870838477)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 12 20:42:21 +0000 2010](https://twitter.com/ChristopherA/status/13870838477)
 
 ----
 
 > Heading back home to Berkeley for rest of month. Pleased that lots of social web seeds beginning to take root at @BGIedu.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed May 12 20:46:29 +0000 2010](https://twitter.com/ChristopherA/status/13871022137)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 12 20:46:29 +0000 2010](https://twitter.com/ChristopherA/status/13871022137)
 
 ----
 
 > Technology can be amazing. We hear hovering helicopter above us in Berkeley & after twitter search find live video from that heli of a fire
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 13 20:05:20 +0000 2010](https://twitter.com/ChristopherA/status/13931992421)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 13 20:05:20 +0000 2010](https://twitter.com/ChristopherA/status/13931992421)
 
 ----
 
 > Live video feed from helicopter near my home, of Berkeley house fire [http://bit.ly/9zsotF](http://bit.ly/9zsotF)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 13 20:08:29 +0000 2010](https://twitter.com/ChristopherA/status/13932127246)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 13 20:08:29 +0000 2010](https://twitter.com/ChristopherA/status/13932127246)
 
 ----
 
 > This sounds like fun, a Health Games Challenge [http://www.healthgameschallenge.org/](http://www.healthgameschallenge.org/) — wonder if we should do that for sustainability?
 
-<img src="../../media/tweet.ico" width="12" /> [Thu May 20 14:45:57 +0000 2010](https://twitter.com/ChristopherA/status/14365643720)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 20 14:45:57 +0000 2010](https://twitter.com/ChristopherA/status/14365643720)
 
 ----
 
 > I do like this picture of the Space Shuttle Atlantis and the ISS transiting the sun. Reminds me of Star Trek. [http://bit.ly/akzVsK](http://bit.ly/akzVsK)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri May 21 00:35:43 +0000 2010](https://twitter.com/ChristopherA/status/14394314775)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 21 00:35:43 +0000 2010](https://twitter.com/ChristopherA/status/14394314775)
 
 ----
 
 > .@peterkaminski my problem with Curio and most other mind-mapping apps is that they are node focused. Connections are more important.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed May 26 20:57:29 +0000 2010](https://twitter.com/ChristopherA/status/14787836081)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 26 20:57:29 +0000 2010](https://twitter.com/ChristopherA/status/14787836081)
 
 ----
 
 > “how to add tension to a cooperative game?" asks @NicoleLazzaro. Take a look at Pandemic and my game Arkham Horror—both have doom tracks.
 
-<img src="../../media/tweet.ico" width="12" /> [Fri May 28 23:44:24 +0000 2010](https://twitter.com/ChristopherA/status/14939767694)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 28 23:44:24 +0000 2010](https://twitter.com/ChristopherA/status/14939767694)
