--- a/_tweets-md/2011/2011-10-01-tweets.md
+++ b/_tweets-md/2011/2011-10-01-tweets.md
@@ -1,108 +1,114 @@
+---    
+title: "Social Media - October"
+date: "2011-10-31"
+time: 23:59:59 +0000
+---
+
 > On way back to Berkeley—great weekend working with sustainable MBA students at #BGIedu who facilitate social change: [http://twitpic.com/6uo5q3](http://twitpic.com/6uo5q3)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Oct 03 18:01:00 +0000 2011](https://twitter.com/ChristopherA/status/120921306924453888)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Oct 03 18:01:00 +0000 2011](https://twitter.com/ChristopherA/status/120921306924453888)
 
 ----
 
 > My #BGIedu "Using the Social Web for Social Change" students are excited to have @markos, author of Taking On The System, as guest on 10/12.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Oct 03 18:07:58 +0000 2011](https://twitter.com/ChristopherA/status/120923060147732480)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Oct 03 18:07:58 +0000 2011](https://twitter.com/ChristopherA/status/120923060147732480)
 
 ----
 
 > RT @sebpaquet: What matters is not how much it sucks, but whether and how fast it's improving.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Oct 03 18:08:45 +0000 2011](https://twitter.com/ChristopherA/status/120923257724608512)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Oct 03 18:08:45 +0000 2011](https://twitter.com/ChristopherA/status/120923257724608512)
 
 ----
 
 > RT @psound74: qtd in #bgimgt566sx "no one can achieve their right livelihood in a state of fear" (mike g) @BGIedu
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Oct 03 18:44:43 +0000 2011](https://twitter.com/ChristopherA/status/120932308093116416)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Oct 03 18:44:43 +0000 2011](https://twitter.com/ChristopherA/status/120932308093116416)
 
 ----
 
 > At SEA until 2:40pm flight - any other flyers want to kill some time? (@ Seattle-Tacoma International Airport (SEA)) [http://4sq.com/o19r2X](http://4sq.com/o19r2X)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Oct 03 19:14:07 +0000 2011](https://twitter.com/ChristopherA/status/120939707260612610)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Oct 03 19:14:07 +0000 2011](https://twitter.com/ChristopherA/status/120939707260612610)
 
 ----
 
 > @DavidSibbet: Your post on twitter re "Webinar on Visual Teams--Graphic Tools for Commitment, Innovation, and High Performance" link is bad.
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Oct 03 21:50:13 +0000 2011](https://twitter.com/ChristopherA/status/120978988398161921)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Oct 03 21:50:13 +0000 2011](https://twitter.com/ChristopherA/status/120978988398161921)
 
 ----
 
 > Read it! "Imagine a world controlled by Facebook" by @MarieWallace "a slightly less optimistic perspective" [http://bit.ly/mWqfZf](http://bit.ly/mWqfZf) #privacy
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Oct 04 00:50:09 +0000 2011](https://twitter.com/ChristopherA/status/121024269978308608)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Oct 04 00:50:09 +0000 2011](https://twitter.com/ChristopherA/status/121024269978308608)
 
 ----
 
 > RT @zenext: There are two kinds of freedom: freedom that diminishes the freedom of others and freedom that invites the freedom of others.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Oct 04 00:52:44 +0000 2011](https://twitter.com/ChristopherA/status/121024921148198912)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Oct 04 00:52:44 +0000 2011](https://twitter.com/ChristopherA/status/121024921148198912)
 
 ----
 
 > #qotd @zenext: There are two kinds of freedom: freedom that diminishes the freedom of others and freedom that invites the freedom of others.
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Oct 04 01:28:33 +0000 2011](https://twitter.com/ChristopherA/status/121033933176582144)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Oct 04 01:28:33 +0000 2011](https://twitter.com/ChristopherA/status/121033933176582144)
 
 ----
 
 > Good case study: @awsamuel: Rethinking the value of the "like" button: [http://ow.ly/6MyQH](http://ow.ly/6MyQH)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Oct 04 16:21:46 +0000 2011](https://twitter.com/ChristopherA/status/121258719639117824)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Oct 04 16:21:46 +0000 2011](https://twitter.com/ChristopherA/status/121258719639117824)
 
 ----
 
 > RT @jen_martinez: Lots of great content for sustainability related topics—The Guardian's sustainable living hub: [http://bit.ly/n780W8](http://bit.ly/n780W8)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Oct 05 16:54:26 +0000 2011](https://twitter.com/ChristopherA/status/121629328952930304)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 05 16:54:26 +0000 2011](https://twitter.com/ChristopherA/status/121629328952930304)
 
 ----
 
 > RT @kallewoof: I have my doubts about Siri (which btw becomes "butt" in Japanese; good choice ("Hold on let me just ask my butt")) but i ...
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Oct 05 17:43:28 +0000 2011](https://twitter.com/ChristopherA/status/121641669090230273)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 05 17:43:28 +0000 2011](https://twitter.com/ChristopherA/status/121641669090230273)
 
 ----
 
 > RT @Suznami: Social+sustainable = @itsbbmg's proprietary new PR/social media division [http://bit.ly/pbfHSW](http://bit.ly/pbfHSW)  @ChristopherA share w/ your  ...
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Oct 05 17:45:05 +0000 2011](https://twitter.com/ChristopherA/status/121642075266617344)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 05 17:45:05 +0000 2011](https://twitter.com/ChristopherA/status/121642075266617344)
 
 ----
 
 > Interesting contest via @appsumo—win a Dropbox Pro account for Life: [http://appsumo.com/~B6om](http://appsumo.com/~B6om) I use Dropbox a LOT, so I hope a friend wins one.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Oct 05 20:56:21 +0000 2011](https://twitter.com/ChristopherA/status/121690209690730498)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 05 20:56:21 +0000 2011](https://twitter.com/ChristopherA/status/121690209690730498)
 
 ----
 
 > #qotd "Remembering that I’ll be dead soon is the most important tool I’ve ever encountered to help me make the big choices" #RIPSteveJobs
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Oct 06 03:25:45 +0000 2011](https://twitter.com/ChristopherA/status/121788205476491265)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Oct 06 03:25:45 +0000 2011](https://twitter.com/ChristopherA/status/121788205476491265)
 
 ----
 
 > Governor Brown in CA signs BCorp legislation [http://bit.ly/nifNOW](http://bit.ly/nifNOW) "to create a material positive impact on society and the environment"
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Oct 12 03:26:58 +0000 2011](https://twitter.com/ChristopherA/status/123962836673232896)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 12 03:26:58 +0000 2011](https://twitter.com/ChristopherA/status/123962836673232896)
 
 ----
 
 > RT @sebpaquet: Swarm movements are not about demanding. They are about doing. Fantastic analysis by @timrayner01 [http://www.coalitionblog.org/2011/10/swarm-wall-street-why-an-anti-political-movement-is-the-most-important-force-on-the-planet/](http://www.coalitionblog.org/2011/10/swarm-wall-street-why-an-anti-political-movement-is-the-most-important-force-on-the-planet/)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Oct 12 03:32:22 +0000 2011](https://twitter.com/ChristopherA/status/123964198190465024)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 12 03:32:22 +0000 2011](https://twitter.com/ChristopherA/status/123964198190465024)
 
 ----
 
 > RT @waxpancake: 24 years ago, Apple predicted a natural-language voice assistant built into touch devices. They were only a month off. h ...
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Oct 12 04:08:03 +0000 2011](https://twitter.com/ChristopherA/status/123973177884938243)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 12 04:08:03 +0000 2011](https://twitter.com/ChristopherA/status/123973177884938243)
 
 ----
 
@@ -110,112 +116,112 @@ Replying to [@SunniBrown](https://twitter.com/@SunniBrown/status/124538684954525
 
 > Are the "whiteys" re-writeable as a white wall is? If yes, can you share a brand name or link?
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Oct 13 18:48:56 +0000 2011](https://twitter.com/ChristopherA/status/124557246540693504)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Oct 13 18:48:56 +0000 2011](https://twitter.com/ChristopherA/status/124557246540693504)
 
 ----
 
-Replying to [@ChristopherA](https://twitter.com/@ChristopherA/status/124591592425267200)
+
 
 > Interesting re-writable post-it-note sized whiteboards only $1 [http://www.whiteyboard.com/order-now-whiteboard/post-it-whiteboard.html](http://www.whiteyboard.com/order-now-whiteboard/post-it-whiteboard.html) /via @SunniBrown
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Oct 13 21:19:25 +0000 2011](https://twitter.com/ChristopherA/status/124595117519675392)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Oct 13 21:19:25 +0000 2011](https://twitter.com/ChristopherA/status/124595117519675392)
 
 ----
 
 > Heading to Angel Island on a sunny indian summer day:  [http://twitpic.com/708quy](http://twitpic.com/708quy)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Oct 14 18:12:11 +0000 2011](https://twitter.com/ChristopherA/status/124910387610124289)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 14 18:12:11 +0000 2011](https://twitter.com/ChristopherA/status/124910387610124289)
 
 ----
 
 > RT @NancyWhite: Great quick overview of possible group mtg formats [http://bit.ly/qHPzFB](http://bit.ly/qHPzFB) #km4dev #sfrome #facilitation
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Oct 14 18:13:35 +0000 2011](https://twitter.com/ChristopherA/status/124910738660794368)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 14 18:13:35 +0000 2011](https://twitter.com/ChristopherA/status/124910738660794368)
 
 ----
 
 > My sweetie M has been camping on Angel Island all week—she always has the most amazing camping weather karma:  [http://twitpic.com/70a9yg](http://twitpic.com/70a9yg)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Oct 14 20:16:06 +0000 2011](https://twitter.com/ChristopherA/status/124941570234523648)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 14 20:16:06 +0000 2011](https://twitter.com/ChristopherA/status/124941570234523648)
 
 ----
 
 > There are still things buzz does that g+ does not. &lt;sigh&gt; RT @jerrymichalski: I guess Google is officially a Buzzkill [http://bit.ly/qlZTYM](http://bit.ly/qlZTYM)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Oct 14 20:22:09 +0000 2011](https://twitter.com/ChristopherA/status/124943093458935808)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 14 20:22:09 +0000 2011](https://twitter.com/ChristopherA/status/124943093458935808)
 
 ----
 
 > #qotd @cshirky "This is a dangerous moment for free speech because we don't know how nation states and individuals interact."/via @sdmoeller
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Oct 14 20:29:58 +0000 2011](https://twitter.com/ChristopherA/status/124945062776942593)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 14 20:29:58 +0000 2011](https://twitter.com/ChristopherA/status/124945062776942593)
 
 ----
 
 > RT @JerryBrownGov: This Sunday will be Steve Jobs Day in the State of California.
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Oct 15 06:28:24 +0000 2011](https://twitter.com/ChristopherA/status/125095660537118720)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Oct 15 06:28:24 +0000 2011](https://twitter.com/ChristopherA/status/125095660537118720)
 
 ----
 
 > It looks like you can send Twitter messages using Apple's Siri as well
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Oct 15 08:07:24 +0000 2011](https://twitter.com/ChristopherA/status/125120573838860288)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Oct 15 08:07:24 +0000 2011](https://twitter.com/ChristopherA/status/125120573838860288)
 
 ----
 
 > I've found a few #iPhone4S #Siri jokes, but this one made me laugh the hardest "I need to hide a body" #SiriHumor: 
 > 
-> ![](../../media/125342777184747520-Ab1Ol33CAAAgRDU.jpg)
+> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/125342777184747520-Ab1Ol33CAAAgRDU.jpg)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Oct 15 22:50:22 +0000 2011](https://twitter.com/ChristopherA/status/125342777184747520)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Oct 15 22:50:22 +0000 2011](https://twitter.com/ChristopherA/status/125342777184747520)
 
 ----
 
 > Students in my @BGIedu class Using the Social Web for Social Change are posting about #FOOD for Blog Action Day #BAD11 [http://bit.ly/nBXSDO](http://bit.ly/nBXSDO)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Oct 17 00:43:15 +0000 2011](https://twitter.com/ChristopherA/status/125733576980443136)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Oct 17 00:43:15 +0000 2011](https://twitter.com/ChristopherA/status/125733576980443136)
 
 ----
 
 > Slidecast (slides+audio) on the topic of memes and memetics. Excerpt from "Using the Social Web for Social Change" [http://slidesha.re/nOIyP5](http://slidesha.re/nOIyP5)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Oct 18 05:23:44 +0000 2011](https://twitter.com/ChristopherA/status/126166551526260736)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Oct 18 05:23:44 +0000 2011](https://twitter.com/ChristopherA/status/126166551526260736)
 
 ----
 
 > #qotd (quote of the day) & maybe a new personal motto "True wisdom leaks from the joins between disciplines."—Ian McDonald in Dervish House
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Oct 23 18:04:24 +0000 2011](https://twitter.com/ChristopherA/status/128169920415535105)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Oct 23 18:04:24 +0000 2011](https://twitter.com/ChristopherA/status/128169920415535105)
 
 ----
 
 > Thoroughly infected by game memes: game designer @KennethHite writes about his 8yr nephew's implicit game design skills [http://bit.ly/v1xxnX](http://bit.ly/v1xxnX)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Oct 25 20:34:25 +0000 2011](https://twitter.com/ChristopherA/status/128932446463995904)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Oct 25 20:34:25 +0000 2011](https://twitter.com/ChristopherA/status/128932446463995904)
 
 ----
 
 > @mthacks Any chance you can an optional bit.ly API key to your javascript in twitter-bookmarklet-and-tweet-button? I like my own history.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Oct 26 00:33:01 +0000 2011](https://twitter.com/ChristopherA/status/128992492573040641)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 26 00:33:01 +0000 2011](https://twitter.com/ChristopherA/status/128992492573040641)
 
 ----
 
 > Excellent explanation of one of the features I love in Google Reader and why I'm a bit fearful of some upcoming changes [http://bit.ly/vpCvyc](http://bit.ly/vpCvyc)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Oct 26 00:36:21 +0000 2011](https://twitter.com/ChristopherA/status/128993331706474497)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 26 00:36:21 +0000 2011](https://twitter.com/ChristopherA/status/128993331706474497)
 
 ----
 
 > Useful Mac Lion tip—when copying multiple files, hold option to change "keep both" to "skip". From Mac OS X Hints: [http://macw.us/vvSrFQ](http://macw.us/vvSrFQ)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Oct 28 00:53:14 +0000 2011](https://twitter.com/ChristopherA/status/129722355307118593)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 28 00:53:14 +0000 2011](https://twitter.com/ChristopherA/status/129722355307118593)
 
 ----
 
 > The local Kensington haunted house has taken over the whole block: 
 > 
-> ![](../../media/131216876364775424-AdItDciCQAAKJqk.jpg)
+> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/131216876364775424-AdItDciCQAAKJqk.jpg)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 01 03:51:56 +0000 2011](https://twitter.com/ChristopherA/status/131216876364775424)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 01 03:51:56 +0000 2011](https://twitter.com/ChristopherA/status/131216876364775424)
