--- a/_tweets-md/2011/2011-09-01-tweets.md
+++ b/_tweets-md/2011/2011-09-01-tweets.md
@@ -1,99 +1,105 @@
+---    
+title: "Social Media - September"
+date: "2011-09-30"
+time: 23:59:59 +0000
+---
+
 > Actually did meet a celebrity on the LA to Paris flight. And one whose work I've come to appreciate recently: Emma Stone @stonenobrien
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Sep 01 09:25:27 +0000 2011](https://twitter.com/ChristopherA/status/109195152563777536)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 01 09:25:27 +0000 2011](https://twitter.com/ChristopherA/status/109195152563777536)
 
 ----
 
 > Arrived in Paris for one night before heading on to Istanbul. Schedule open this evening and morning. (@ Terminal 2E) [http://4sq.com/mUUEl5](http://4sq.com/mUUEl5)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Sep 01 09:27:58 +0000 2011](https://twitter.com/ChristopherA/status/109195785949818880)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 01 09:27:58 +0000 2011](https://twitter.com/ChristopherA/status/109195785949818880)
 
 ----
 
 > Rooms at Ibis Hotel may be very small, but very cheap, modern and clean. Real reason to stay here: adjacent to CDG... [http://4sq.com/o67ONT](http://4sq.com/o67ONT)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Sep 01 10:54:35 +0000 2011](https://twitter.com/ChristopherA/status/109217584586567681)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 01 10:54:35 +0000 2011](https://twitter.com/ChristopherA/status/109217584586567681)
 
 ----
 
 > Brief video of nighttime call to prayer at Istanbul's Blue Mosque:  [http://yfrog.us/ms33505444z](http://yfrog.us/ms33505444z)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Sep 02 20:59:56 +0000 2011](https://twitter.com/ChristopherA/status/109732310835929089)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Sep 02 20:59:56 +0000 2011](https://twitter.com/ChristopherA/status/109732310835929089)
 
 ----
 
 > Fascinating juxtaposition: Women in full veil and burka, videoing using iPad 2 at Turkish Palace:  [http://twitpic.com/6fwafq](http://twitpic.com/6fwafq)
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Sep 04 10:22:28 +0000 2011](https://twitter.com/ChristopherA/status/110296664811638784)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Sep 04 10:22:28 +0000 2011](https://twitter.com/ChristopherA/status/110296664811638784)
 
 ----
 
 > Amazing post-sunset sky, probably caused by shadows of Aegean islands beyond the horizon of Bodrum Turkey: [http://twitpic.com/6jyrtd](http://twitpic.com/6jyrtd)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Sep 12 16:53:13 +0000 2011](https://twitter.com/ChristopherA/status/113294103202107393)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Sep 12 16:53:13 +0000 2011](https://twitter.com/ChristopherA/status/113294103202107393)
 
 ----
 
 > Leaving a day early from Kos back to Paris. Kos is good for couples and beach bums, but not here much for me. [http://4sq.com/nInWjg](http://4sq.com/nInWjg)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Sep 15 10:46:32 +0000 2011](https://twitter.com/ChristopherA/status/114288986893197312)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 15 10:46:32 +0000 2011](https://twitter.com/ChristopherA/status/114288986893197312)
 
 ----
 
 > Paris street art of skeleton near Arc de Triomphe. A counter statement?  [http://twitpic.com/6lo4q7](http://twitpic.com/6lo4q7)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Sep 16 12:43:26 +0000 2011](https://twitter.com/ChristopherA/status/114680794492055553)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Sep 16 12:43:26 +0000 2011](https://twitter.com/ChristopherA/status/114680794492055553)
 
 ----
 
 > I love this old oak tree showing just the tips of fall color. It is under the Eiffel Tower, but somehow just as grand: [http://twitpic.com/6lopyu](http://twitpic.com/6lopyu)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Sep 16 13:24:32 +0000 2011](https://twitter.com/ChristopherA/status/114691137272422400)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Sep 16 13:24:32 +0000 2011](https://twitter.com/ChristopherA/status/114691137272422400)
 
 ----
 
 > Returning home from Paris today via LAX. This week I start teaching my "Using the Social Web for Social Change" class at #BGIedu
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Sep 18 08:52:41 +0000 2011](https://twitter.com/ChristopherA/status/115347498134011904)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Sep 18 08:52:41 +0000 2011](https://twitter.com/ChristopherA/status/115347498134011904)
 
 ----
 
 > At OAK -&gt; SEA for #BGIedu intensive this weekend. Teaching "Using the Social Web for Social Change" in green MBA. [http://4sq.com/ozGILK](http://4sq.com/ozGILK)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Sep 28 19:03:44 +0000 2011](https://twitter.com/ChristopherA/status/119125153119608832)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 28 19:03:44 +0000 2011](https://twitter.com/ChristopherA/status/119125153119608832)
 
 ----
 
 > Long-time Apple employee @cdespinosa has many privacy concerns re: #AmazonFire [http://post.ly/3P9In](http://post.ly/3P9In) — at first glance, I have to agree.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Sep 28 19:14:56 +0000 2011](https://twitter.com/ChristopherA/status/119127970437795840)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 28 19:14:56 +0000 2011](https://twitter.com/ChristopherA/status/119127970437795840)
 
 ----
 
 > I will buy the e-ink Kindle Touch—the non-LED screen doesn't disrupt sleep patterns. Not happy with privacy of #AmazonSilk in #AmazonFire.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Sep 28 19:41:49 +0000 2011](https://twitter.com/ChristopherA/status/119134739339821056)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 28 19:41:49 +0000 2011](https://twitter.com/ChristopherA/status/119134739339821056)
 
 ----
 
 > RT @mashable: Facebook Users Beware: Facebook’s New Feature Could Embarrass You - [http://on.mash.to/psGBrI](http://on.mash.to/psGBrI)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Sep 28 22:17:35 +0000 2011](https://twitter.com/ChristopherA/status/119173938717786112)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 28 22:17:35 +0000 2011](https://twitter.com/ChristopherA/status/119173938717786112)
 
 ----
 
 > RT @heathervescent: Attention: Looking for Collaborators on Systems Diagram of Tangible & Non-Tangible Transactions: [http://t.co/dlABurP](http://t.co/dlABurP) ...
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Sep 29 04:39:14 +0000 2011](https://twitter.com/ChristopherA/status/119269981342007296)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 29 04:39:14 +0000 2011](https://twitter.com/ChristopherA/status/119269981342007296)
 
 ----
 
 > What social change projects would you you like to see BGIedu green MBA students tackle in "Using the Social Web for Social Change" class?
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Oct 01 04:12:56 +0000 2011](https://twitter.com/ChristopherA/status/119988138235011072)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Oct 01 04:12:56 +0000 2011](https://twitter.com/ChristopherA/status/119988138235011072)
 
 ----
 
 > WSJ talks about Heroic Failure Awards in article Better Ideas Through Failure [http://on.wsj.com/mP7jZi](http://on.wsj.com/mP7jZi) —we do something similar at #iOSDevCamp
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Oct 01 06:22:27 +0000 2011](https://twitter.com/ChristopherA/status/120020733282889728)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Oct 01 06:22:27 +0000 2011](https://twitter.com/ChristopherA/status/120020733282889728)
