--- a/_tweets-md/2011/2011-11-01-tweets.md
+++ b/_tweets-md/2011/2011-11-01-tweets.md
@@ -1,133 +1,139 @@
+---    
+title: "Social Media - November"
+date: "2011-11-30"
+time: 23:59:59 +0000
+---
+
 > On my way to Seattle for @BGIedu intensive. This week starts Social Change Projects for my students. [http://4sq.com/tmHZWF](http://4sq.com/tmHZWF)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 02 15:36:21 +0000 2011](https://twitter.com/ChristopherA/status/131756540406407168)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 02 15:36:21 +0000 2011](https://twitter.com/ChristopherA/status/131756540406407168)
 
 ----
 
 > #qotd "storytelling is the human software of the creative economy"—Michael Margolis via @_granthughes @getstoried @justinemusk
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 02 15:48:41 +0000 2011](https://twitter.com/ChristopherA/status/131759644635963392)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 02 15:48:41 +0000 2011](https://twitter.com/ChristopherA/status/131759644635963392)
 
 ----
 
 > Beautiful autumn colors in Seattle from the plane window this morning: 
 > 
-> ![](../../media/131799095508598784-AdQ-lD3CAAAfsdk.jpg)
+> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/131799095508598784-AdQ-lD3CAAAfsdk.jpg)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 02 18:25:29 +0000 2011](https://twitter.com/ChristopherA/status/131799095508598784)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 02 18:25:29 +0000 2011](https://twitter.com/ChristopherA/status/131799095508598784)
 
 ----
 
 > Maybe the problem with US Congress is that almost half are lawyers, trained to use facts selectively to win rather then reveal the truth.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 02 18:28:08 +0000 2011](https://twitter.com/ChristopherA/status/131799768514035712)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 02 18:28:08 +0000 2011](https://twitter.com/ChristopherA/status/131799768514035712)
 
 ----
 
 > Our first iPhone euro-style card game "Reiner Knizia's Money" is now available as a Macintosh app in the Mac App Store! [http://bit.ly/rkmoneymac](http://bit.ly/rkmoneymac)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Nov 03 00:45:33 +0000 2011](https://twitter.com/ChristopherA/status/131894749031448578)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 03 00:45:33 +0000 2011](https://twitter.com/ChristopherA/status/131894749031448578)
 
 ----
 
 > I hope that Google takes @kfury up with his offer to come back to Google Reader and fix the UI. [http://fury.com/2011/11/my-offer-to-google-reader/](http://fury.com/2011/11/my-offer-to-google-reader/)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Nov 03 06:54:26 +0000 2011](https://twitter.com/ChristopherA/status/131987583281537025)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 03 06:54:26 +0000 2011](https://twitter.com/ChristopherA/status/131987583281537025)
 
 ----
 
 > Interesting new sustainability acronym I've not heard before: S.A.G.E. — Simple Abundant Grounded Effective. /via Joe Flood of Ecuador
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Nov 03 22:18:35 +0000 2011](https://twitter.com/ChristopherA/status/132220152497442816)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 03 22:18:35 +0000 2011](https://twitter.com/ChristopherA/status/132220152497442816)
 
 ----
 
 > RT @rceurvorst: "Be a dream catcher, not a dream stealer" @geniusidealady on topic of #influence at @BGIedu #BGIhybrid Social Web 4 Soci ...
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Nov 06 21:48:05 +0000 2011](https://twitter.com/ChristopherA/status/133299640815730688)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 06 21:48:05 +0000 2011](https://twitter.com/ChristopherA/status/133299640815730688)
 
 ----
 
 > #qotd (aka quote of the day) "A goal is a dream with a deadline." — Napoleon Hill /via the .sig of @michaelbmaine
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Nov 08 05:11:43 +0000 2011](https://twitter.com/ChristopherA/status/133773673684418560)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 08 05:11:43 +0000 2011](https://twitter.com/ChristopherA/status/133773673684418560)
 
 ----
 
 > A followup to my #qotd yesterday  "A dream is a goal without a deadline" — Ramesh Ramloll
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Nov 10 04:31:00 +0000 2011](https://twitter.com/ChristopherA/status/134488202869346304)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 10 04:31:00 +0000 2011](https://twitter.com/ChristopherA/status/134488202869346304)
 
 ----
 
 > Free for two days, iPhone app Namerick helps you remember names. A Social Channel Capacity Tool? [http://bit.ly/vfRJUE](http://bit.ly/vfRJUE)
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Nov 11 02:31:39 +0000 2011](https://twitter.com/ChristopherA/status/134820551859511296)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 11 02:31:39 +0000 2011](https://twitter.com/ChristopherA/status/134820551859511296)
 
 ----
 
 > @t What was that hotel in Austin that you recommended for SXSW?
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Nov 12 02:27:25 +0000 2011](https://twitter.com/ChristopherA/status/135181874661302272)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 12 02:27:25 +0000 2011](https://twitter.com/ChristopherA/status/135181874661302272)
 
 ----
 
 > #qotd: To me, ideas are worth nothing unless executed. They are just a multiplier. Execution is worth millions.—Silvers [http://bit.ly/ufnzGE](http://bit.ly/ufnzGE)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 16 02:23:06 +0000 2011](https://twitter.com/ChristopherA/status/136630342374268928)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 16 02:23:06 +0000 2011](https://twitter.com/ChristopherA/status/136630342374268928)
 
 ----
 
 > I wanted to like Amazon's Kindle Fire, but after a few days I have to agree with @MarcoArment of @Instapaper: [http://bit.ly/sQlUKu](http://bit.ly/sQlUKu)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Nov 19 20:12:41 +0000 2011](https://twitter.com/ChristopherA/status/137986673320538112)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 19 20:12:41 +0000 2011](https://twitter.com/ChristopherA/status/137986673320538112)
 
 ----
 
 > I'm joining Bria Schlottman @wavefrog22 as co-blogger for Refreshing Work. My first post: A Relationship with Work [http://bit.ly/tEAuEo](http://bit.ly/tEAuEo)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Nov 21 21:22:43 +0000 2011](https://twitter.com/ChristopherA/status/138729074926424064)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Nov 21 21:22:43 +0000 2011](https://twitter.com/ChristopherA/status/138729074926424064)
 
 ----
 
 > Interesting connection of social class as a factor in poor quality user experience: @brentsimmons The Pummeling Pages [http://bit.ly/rP6ybf](http://bit.ly/rP6ybf)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 23 17:10:25 +0000 2011](https://twitter.com/ChristopherA/status/139390357896036352)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 23 17:10:25 +0000 2011](https://twitter.com/ChristopherA/status/139390357896036352)
 
 ----
 
 > At OAK, heading to SEA and the @BGIedu Intensive at IslandWood tomorrow. [pic]: [http://4sq.com/tjiBym](http://4sq.com/tjiBym)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 30 16:01:55 +0000 2011](https://twitter.com/ChristopherA/status/141909834047041536)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 30 16:01:55 +0000 2011](https://twitter.com/ChristopherA/status/141909834047041536)
 
 ----
 
 > “@finnern: Time as most important…factor…Kevin Kelly doesn't use Twitter as it takes more time than it gives.” Then he isn't using it right.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 30 20:24:17 +0000 2011](https://twitter.com/ChristopherA/status/141975858922520576)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 30 20:24:17 +0000 2011](https://twitter.com/ChristopherA/status/141975858922520576)
 
 ----
 
-Replying to [@ChristopherA](https://twitter.com/finnern/status/141968636079374336)
+
 
 > "@finnern I use Twitter less the 15m a day, 4x more when traveling. But with effective lists and tools like Zite, I get huge signal ratio.
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 30 20:34:37 +0000 2011](https://twitter.com/ChristopherA/status/141978460263432192)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 30 20:34:37 +0000 2011](https://twitter.com/ChristopherA/status/141978460263432192)
 
 ----
 
 > RT @sustainableMBA: Confirmation bias exists. We read news articles that support what we believe so that we use it as a reference to why ...
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 30 20:39:16 +0000 2011](https://twitter.com/ChristopherA/status/141979628888801280)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 30 20:39:16 +0000 2011](https://twitter.com/ChristopherA/status/141979628888801280)
 
 ----
 
 > Just ship it! :-) RT “@rachelmrmaxwell: "Done is the engine of more." 13 Rules For Realizing Your Creative Vision [http://www.fastcodesign.com/1665527/infographic-of-the-day-13-rules-for-realizing-your-creative-vision”](http://www.fastcodesign.com/1665527/infographic-of-the-day-13-rules-for-realizing-your-creative-vision”)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 30 20:46:59 +0000 2011](https://twitter.com/ChristopherA/status/141981571107393536)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 30 20:46:59 +0000 2011](https://twitter.com/ChristopherA/status/141981571107393536)
 
 ----
 
 > #qotd "an original idea is one derided as silly, stupid, or impossible"—@fredwilson via @sebpaquet
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Nov 30 20:50:38 +0000 2011](https://twitter.com/ChristopherA/status/141982492956696576)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 30 20:50:38 +0000 2011](https://twitter.com/ChristopherA/status/141982492956696576)
